--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,12 +12,16 @@ jobs:
       - run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
       - run: docker network prune -f
 
-      - run:
-          name: update-npm
-          command: 'sudo npm install -g npm@latest'
+      - run: |
+            echo 'export NVM_DIR="/opt/circleci/.nvm"' >> $BASH_ENV
+            echo ' [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"' >> $BASH_ENV
+      - run: |
+          node -v
+
       - restore_cache: # special step to restore the dependency cache
           # Read about caching dependencies: https://circleci.com/docs/2.0/caching/
           key: dependency-cache-{{ checksum "package.json" }}
+
       - run:
           name: install-npm-wee
           command: npm install
