--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,28 +16,20 @@ jobs:
             echo 'export NVM_DIR="/opt/circleci/.nvm"' >> $BASH_ENV
             echo ' [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"' >> $BASH_ENV
       - run: |
-          node -v
-      - run: |
           nvm install v12
-          node -v
           nvm alias default v12
-      - run: |
           node -v
 
       - restore_cache: # special step to restore the dependency cache
           # Read about caching dependencies: https://circleci.com/docs/2.0/caching/
           key: dependency-cache-{{ checksum "package.json" }}
 
-      - run:
-          name: install-npm-wee
-          command: npm install
+      - run: npm install
       - save_cache: # special step to save the dependency cache
           key: dependency-cache-{{ checksum "package.json" }}
           paths:
             - ./node_modules
-      - run: # run tests
-          name: test
-          command: npm test
+      - run: npm test
 
   deploy:
     machine: true
