--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,23 +8,23 @@ services:
     ports:
       - 5432:5432
 
-  # project-service:
-  #   image: ampnet/project-service:latest
-  #   environment:
-  #     - "spring.profiles.active=integration-test"
-  #   depends_on:
-  #      - db
-  #   ports:
-  #      - 8123:8123
+  project-service:
+    image: ampnet/project-service:latest
+    environment:
+      - "spring.profiles.active=integration-test"
+    depends_on:
+       - db
+    ports:
+       - 8123:8123
 
-  # wallet-service:
-  #   image: ampnet/wallet-service:latest
-  #   environment:
-  #     - "spring.profiles.active=integration-test"
-  #   depends_on:
-  #      - db
-  #   ports:
-  #      - 8128:8128
+  wallet-service:
+    image: ampnet/wallet-service:latest
+    environment:
+      - "spring.profiles.active=integration-test"
+    depends_on:
+       - db
+    ports:
+       - 8128:8128
 
   blockchain-service:
     image: ampnet/crowdfunding-ae-middleware:0.0.99
@@ -35,12 +35,12 @@ services:
       COMPILER_URL: http://sophia-compiler:3080
       NETWORK_ID: ae_docker
       GIFT_AMOUNT: 0
-      DB_HOST: http://db
+      DB_HOST: db
       DB_PORT: 5432
       DB_USER: ae_middleware_testnet
       DB_PASSWORD: password
       DB_NAME: ae_middleware_testnet
-    restart: on-failure:3
+    restart: always
     depends_on:
       - db
       - ae-node
@@ -49,24 +49,19 @@ services:
       - 8124:8124
       - 8224:8224
 
-  # user-service:
-  #   image: ampnet/crowdfunding-user-service:latest
-  #   environment:
-  #     - "spring.profiles.active=integration-test"
-  #   depends_on:
-  #     - db
-  #   ports:
-  #     - 8125:8125
+  user-service:
+    image: ampnet/crowdfunding-user-service:latest
+    environment:
+      - "spring.profiles.active=integration-test"
+    depends_on:
+      - db
+    ports:
+      - 8125:8125
 
   ae-node:
     image: aeternity/aeternity:v5.0.0-rc.4
     environment:
       AETERNITY_CONFIG: /home/aeternity/aeternity.yaml
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:3013/v2/blocks/top"]
-      interval: 10s
-      timeout: 10s
-      retries: 5
     volumes:
       - ${PWD}/node/config/singlenode_mean15.yaml:/home/aeternity/aeternity.yaml
       - ${PWD}/node/config/accounts_test.json:/home/aeternity/node/data/aecore/.genesis/accounts_test.json
