Local ae node (#4)
* Fix aeternity

* Enable nightly test

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '2'
+version: '3'
 
 services:
   db:
@@ -29,10 +29,22 @@ services:
   blockchain-service:
     image: ampnet/crowdfunding-ae-middleware:latest
     environment:
-      NODE_ENV: testnet
+      NODE_ENV: local
+      NODE_URL: http://ae-node:3013
+      NODE_INTERNAL_URL: http://ae-node:3113
+      COMPILER_URL: http://sophia-compiler:3080
+      NETWORK_ID: ae_docker
       GIFT_AMOUNT: 0
+      DB_HOST: db
+      DB_PORT: 5432
+      DB_USER: ae_middleware_testnet
+      DB_PASSWORD: password
+      DB_NAME: ae_middleware_testnet
+    restart: always
     depends_on:
       - db
+      - ae-node
+      - sophia-compiler
     ports:
       - 8124:8124
       - 8224:8224
@@ -45,6 +57,27 @@ services:
       - db
     ports:
       - 8125:8125
+
+  ae-node:
+    image: aeternity/aeternity:v5.0.0-rc.4
+    environment:
+      AETERNITY_CONFIG: /home/aeternity/aeternity.yaml
+    volumes:
+      - ${PWD}/node/config/singlenode_mean15.yaml:/home/aeternity/aeternity.yaml
+      - ${PWD}/node/config/accounts_test.json:/home/aeternity/node/data/aecore/.genesis/accounts_test.json
+      - ${PWD}/node/keys/node1:/home/aeternity/node/keys
+    ports:
+     - "3013:3013"
+     - "3113:3113"
+     - "3014:3014"
+
+  sophia-compiler:
+    image: aeternity/aesophia_http:v4.0.0
+    ports:
+       - "3080:3080"
+
+
+
   
 
 
