--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "mocha": "^6.2.0",
     "pg": "^7.12.1",
     "querystring": "^0.2.0",
-    "uuid": "^3.3.3"
+    "uuid": "^3.3.3",
+    "@grpc/proto-loader": "^0.4.0",
+    "grpc": "^1.18.0"
   },
   "devDependencies": {}
 }
