--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,6 +40,11 @@ services:
       DB_USER: ae_middleware_testnet
       DB_PASSWORD: password
       DB_NAME: ae_middleware_testnet
+      QUEUE_DB_HOST: db
+      QUEUE_DB_PORT: 5432
+      QUEUE_DB_USER: ae_middleware_testnet_queue
+      QUEUE_DB_PASSWORD: password
+      QUEUE_DB_NAME: ae_middleware_testnet_queue
     restart: always
     depends_on:
       - db
@@ -75,10 +80,3 @@ services:
     image: aeternity/aesophia_http:v4.0.0
     ports:
        - "3080:3080"
-
-
-
-  
-
-
-  
