--- a/package.json
+++ b/package.json
@@ -9,18 +9,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@aeternity/aepp-sdk": "^5.0.0",
+    "@aeternity/aepp-sdk": "^7.1.1",
     "@danielwpz/health-check": "0.0.1",
+    "@grpc/proto-loader": "^0.5.3",
     "chai": "^4.2.0",
     "deepmerge": "^4.2.2",
     "docker-compose": "^0.23.3",
+    "grpc": "^1.24.2",
     "knex": "^0.20.11",
     "mocha": "^7.1.1",
     "pg": "^7.18.1",
     "querystring": "^0.2.0",
-    "uuid": "^7.0.2",
-    "@grpc/proto-loader": "^0.5.3",
-    "grpc": "^1.24.2"
+    "uuid": "^7.0.2"
   },
   "devDependencies": {}
 }
