--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -72,7 +72,7 @@ services:
       - 8129:8129
 
   ae-node:
-    image: aeternity/aeternity:v5.0.0-rc.4
+    image: aeternity/aeternity:v5.5.4
     environment:
       AETERNITY_CONFIG: /home/aeternity/aeternity.yaml
     volumes:
