Add config for postgres 12

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     build:
       context: ./db
     image: integration-db
+    environment:
+      - POSTGRES_PASSWORD=postgres
     ports:
       - 5432:5432
 
