--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -90,3 +90,23 @@ services:
     image: aeternity/aesophia_http:v4.0.0
     ports:
        - "3080:3080"
+
+  auto-funder:
+    image: ampnet/auto-funder:latest
+    environment:
+      QUEUE_DB_HOST: db
+      QUEUE_DB_PORT: 5432
+      QUEUE_DB_USER: ae_middleware_testnet_queue
+      QUEUE_DB_PASSWORD: password
+      QUEUE_DB_NAME: ae_middleware_testnet_queue
+      NODE_URL: http://ae-node:3013
+      NODE_INTERNAL_URL: http://ae-node:3113
+      COMPILER_URL: http://sophia-compiler:3080
+      FUNDERS: 7c6e602a94f30e4ea7edabe4376314f69ba7eaa2f355ecedb339df847b6f0d80575f81ffb0a297b7725dc671da0b1769b1fc5cbe45385c7b5ad1fc2eaf1d609d
+    restart: always
+    depends_on:
+      - ae-node
+      - sophia-compiler
+      - db
+    ports:
+      - "8130:8130"
