--- a/node/config/singlenode_mean15.yaml
+++ b/node/config/singlenode_mean15.yaml
@@ -32,6 +32,8 @@ mining:
     beneficiary: "ak_twR4h7dEcUtc2iSEDv8kB7UFJJDGiEDQCXr85C3fYF8FdVdyo"
     beneficiary_reward_delay: 2
     autostart: true
+    expected_mine_rate: 500
+    micro_block_cycle: 100
     cuckoo:
         edge_bits: 15
         miners:
