--- a/node/config/singlenode_mean15.yaml
+++ b/node/config/singlenode_mean15.yaml
@@ -24,14 +24,16 @@ chain:
     persist: true
     hard_forks:
         "1": 0
-        "2": 2
-        "3": 4
-        "4": 6
+        "2": 1
+        "3": 2
+        "4": 3
 
 mining:
     beneficiary: "ak_twR4h7dEcUtc2iSEDv8kB7UFJJDGiEDQCXr85C3fYF8FdVdyo"
     beneficiary_reward_delay: 2
     autostart: true
+    expected_mine_rate: 500
+    micro_block_cycle: 100
     cuckoo:
         edge_bits: 15
         miners:
