--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@aeternity/aepp-sdk": "^7.4.2",
     "@danielwpz/health-check": "0.0.1",
     "@grpc/proto-loader": "^0.5.5",
+    "amqplib": "^0.6.0",
     "chai": "^4.2.0",
     "deepmerge": "^4.2.2",
     "docker-compose": "^0.23.5",
@@ -21,6 +22,5 @@
     "pg": "^8.5.0",
     "querystring": "^0.2.0",
     "uuid": "^8.3.1"
-  },
-  "devDependencies": {}
+  }
 }
