--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -109,6 +109,7 @@ services:
     image: darthsim/imgproxy:v2.16
     environment:
       IMGPROXY_BIND: :8300
+      IMGPROXY_ENABLE_AVIF_DETECTION: 'true'
       IMGPROXY_ENFORCE_WEBP: 'true'
       IMGPROXY_KEY: 943b421c9eb07c830af81030552c86009268de4e532ba2ee2eab8247c6da0881
       IMGPROXY_SALT: 520f986b998545b4785e0defbc4f3c1203f22de2374a3d53cb7a7fe9fea309c5
