--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
     image: ampnet/project-service:latest
     environment:
       - "spring.profiles.active=integration-test"
+      - "com.ampnet.projectservice.image-proxy.url=http://localhost:8300"
     depends_on:
        - db
     ports:
@@ -103,3 +104,14 @@ services:
     environment:
       RABBITMQ_DEFAULT_USER: user
       RABBITMQ_DEFAULT_PASS: password
+
+  imgproxy:
+    image: darthsim/imgproxy:v2.16
+    environment:
+      IMGPROXY_BIND: :8300
+      IMGPROXY_ENABLE_AVIF_DETECTION: 'true'
+      IMGPROXY_ENFORCE_WEBP: 'true'
+      IMGPROXY_KEY: 943b421c9eb07c830af81030552c86009268de4e532ba2ee2eab8247c6da0881
+      IMGPROXY_SALT: 520f986b998545b4785e0defbc4f3c1203f22de2374a3d53cb7a7fe9fea309c5
+    ports:
+      - 8300:8300
